Aggiunti file immagine e configurazione EditorConfig

--- a/index.html
+++ b/index.html
@@ -1,32 +1,173 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+<html lang="en" class="scroll-smooth">
 
-    <title>Babushka Anatoliy - Web Developer</title>
+<head>
+    <meta charset="UTF-8">
+    <!-- <link rel="icon" href="/logo.png"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Babushka Anatoliy</h1>
-        <p class="lead">Web Developer</p>
-        <h2>
-          <a target="_blank" href="https://twitter.com/bbsnly"><i class="fa fa-twitter fa-2" aria-hidden="true"></i></a>
-          <a target="_blank" href="mailto:anatoliybabushka@gmail.com"><i class="fa fa-address-book fa-2" aria-hidden="true"></i></a>
-          <a target="_blank" href="https://github.com/bbsnly"><i class="fa fa-github fa-2" aria-hidden="true"></i></a>
-        </h2>
-      </div>
-    </div>
+    <title>Anatoliy Babushka | Engineering Leader</title>
+    <meta name="title" content="Anatoliy Babushka | Engineering Leader">
+    <meta name="description"
+        content="Experienced Engineering Leader with 10+ years of success in team growth, product development, and technical strategy, driving efficiency and innovation.">
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://anatoliybabushka.com">
+    <meta property="og:title" content="Anatoliy Babushka | Engineering Leader">
+    <meta property="og:description"
+        content="Experienced Engineering Leader with 10+ years of success in team growth, product development, and technical strategy, driving efficiency and innovation.">
+    <meta property="og:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png">
 
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://anatoliybabushka.com">
+    <meta property="twitter:title" content="Anatoliy Babushka | Engineering Leader">
+    <meta property="twitter:description"
+        content="Experienced Engineering Leader with 10+ years of success in team growth, product development, and technical strategy, driving efficiency and innovation.">
+    <meta property="twitter:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  </body>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script type="module" crossorigin="" src="https://anatoliybabushka.com/script.js"></script>
+    <link rel="stylesheet" href="https://anatoliybabushka.com/styles.css">
+</head>
+
+<body class="flex flex-col bg-white overflow-x-hidden" data-new-gr-c-s-check-loaded="14.1221.0"
+    data-gr-ext-installed="">
+    <header class="px-2 xl:px-0 py-5 border-b">
+        <section class="flex items-center justify-between container xl:w-252 mx-auto">
+            <div class="flex items-center">
+                <p class="text-xl">ANATOLIY BABUSHKA</p>
+            </div>
+
+            <a aria-label="Write me an email" class="group flex items-center gap-2 text-primary py-2 px-4 rounded-full"
+                href="mailto:anatoliybabushka@gmail.com">
+                <span class="group-hover:animate-bounce">
+                    <svg class="fill-primary" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 256 256">
+                        <path
+                            d="M132,24A100.11,100.11,0,0,0,32,124v84.33A15.69,15.69,0,0,0,47.67,224H132a100,100,0,0,0,0-200Zm0,184H48V124a84,84,0,1,1,84,84Zm12-80a12,12,0,1,1-12-12A12,12,0,0,1,144,128Zm-44,0a12,12,0,1,1-12-12A12,12,0,0,1,100,128Zm88,0a12,12,0,1,1-12-12A12,12,0,0,1,188,128Z">
+                        </path>
+                    </svg> </span><span>Write me</span></a>
+        </section>
+    </header>
+    <main class="flex flex-col">
+        <section class="flex flex-col bg-secondary-100 py-32">
+            <div
+                class="flex flex-col md:flex-row justify-center md:justify-between px-2 xl:px-0 container xl:w-252 mx-auto">
+                <div
+                    class="flex flex-col items-center md:items-start text-center md:text-left gap-y-10 w-full md:w-1/2">
+                    <h1 class="text-5xl sm:text-6xl">
+                        I help
+                        <br>
+                        <span class="text-primary italic">companies and individuals</span>
+                        <br>
+                        to deliver impactful results.
+                    </h1>
+
+                    <p class="text-lg">
+                        Leveraging strategic leadership, innovation, and technical expertise to help companies drive
+                        growth and individuals advance their careers through professional coaching and mentorship.
+                    </p>
+
+                    <a class="group flex items-center gap-2 transition duration-500 bg-primary hover:bg-black text-white py-2 px-4 rounded-full w-fit"
+                        href="mailto:anatoliybabushka@gmail.com" aria-label="Write me an email">
+                        <span>
+                            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                viewBox="0 0 256 256">
+                                <path
+                                    d="M132,24A100.11,100.11,0,0,0,32,124v84.33A15.69,15.69,0,0,0,47.67,224H132a100,100,0,0,0,0-200Zm0,184H48V124a84,84,0,1,1,84,84Zm12-80a12,12,0,1,1-12-12A12,12,0,0,1,144,128Zm-44,0a12,12,0,1,1-12-12A12,12,0,0,1,100,128Zm88,0a12,12,0,1,1-12-12A12,12,0,0,1,188,128Z">
+                                </path>
+                            </svg> </span><span>Write me</span>
+                    </a>
+                </div>
+
+                <div class="hidden md:flex w-1/2">
+                    <img width="200px" height="500px" class="h-full w-full object-cover animate-reveal-image"
+                        src="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png" alt="Anatoliy Babushka" loading="eager">
+                </div>
+            </div>
+        </section>
+
+        <section id="about"
+            class="flex flex-col-reverse md:flex-row gap-10 px-2 xl:px-0 container xl:w-252 mx-auto my-20 scroll-mt-10">
+            <div class="md:w-1/2 h-[700px]">
+                <img width="200px" height="1000px" class="h-full w-full object-cover object-center-top"
+                    src="https://anatoliybabushka.com/Anatoliy_Babushka.jpg" alt="Profile pic" loading="lazy">
+            </div>
+
+            <div class="flex flex-col gap-y-5 md:w-1/2 justify-center">
+                <h2 class="text-4xl font-gill-sans-nova">
+                    Let's <span class="italic"></span>shape</span> your journey to
+                    <br /><span class="text-primary">high-performing success</span>
+                </h2>
+
+                <p>
+                    With over a decade of engineering leadership, I transform organizations by aligning technical
+                    strategy with business objectives. I boost efficiency, cut product cycles, and cultivate innovative
+                    cultures, enabling companies to thrive in competitive markets and achieve remarkable growth.
+                </p>
+
+                <p>
+                    In my coaching and consulting practice, I empower professionals to achieve career breakthroughs and
+                    refine their leadership skills. Through personalized mentorship, I help you build high-performing
+                    teams and sustain innovation for long-term impact.
+                </p>
+            </div>
+        </section>
+    </main>
+
+    <footer class="flex flex-col bg-secondary-100 mt-20">
+        <section class="grid grid-cols-12 px-2 xl:px-0 xl:max-w-5xl xl:mx-auto py-20 gap-y-5">
+            <div class="flex flex-col col-start-2 col-span-8 xl:col-start-1 xl:col-span-6 gap-7">
+                <div class="flex items-center">
+                    <p class="text-xl pr-[1px]">ANATOLIY BABUSHKA</p>
+                </div>
+                <p class="w-2/3">
+                    Engineering Leader | Driving Team Growth, Product Development, and Technical Strategy
+                </p>
+                <div class="flex items-center gap-x-3">
+                    <a aria-label="LinkedIn Profile" href="https://www.linkedin.com/in/bbsnly/">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#2563eb"
+                            viewBox="0 0 256 256">
+                            <path
+                                d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24ZM96,176a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0ZM88,96a12,12,0,1,1,12-12A12,12,0,0,1,88,96Zm96,80a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140Z">
+                            </path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="flex flex-col col-span-2 gap-y-7">
+                <h3 class="font-medium">Links</h3>
+                <ul class="flex flex-col gap-2">
+                    <li class="hover:text-primary">
+                        <a aria-label="Home page" href="/">Home</a>
+                    </li>
+                    <li class="hover:text-primary">
+                        <a aria-label="About section" href="#about">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="flex flex-col col-start-2 col-span-10 xl:col-span-4 gap-7">
+                <h3 class="font-medium">Contacts</h3>
+
+                <p class="max-w-sm">
+                    Got a question? Email me—let's connect and create success together!
+                </p>
+
+                <a class="transition duration-500 bg-primary hover:bg-black text-white py-2 px-4 rounded-full w-fit"
+                    href="mailto:anatoliybabushka@gmail.com" aria-label="Contact me now">
+                    Contact me now
+                </a>
+            </div>
+        </section>
+
+        <section class="bg-white">
+            <div
+                class="px-2 xl:px-0 container xl:w-252 sm:mx-auto flex items-center justify-between my-5 space-x-2 sm:space-x-0">
+                <p>© 2025 Anatoliy Babushka</p>
+            </div>
+        </section>
+    </footer>
+</body>
+
 </html>
