--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WG97HS57JW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-WG97HS57JW');
+    </script>
+
     <meta charset="UTF-8">
     <!-- <link rel="icon" href="/logo.png"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +92,8 @@
 
                 <div class="hidden md:flex w-1/2">
                     <img width="200px" height="500px" class="h-full w-full object-cover animate-reveal-image"
-                        src="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png" alt="Anatoliy Babushka" loading="eager">
+                        src="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png" alt="Anatoliy Babushka"
+                        loading="eager">
                 </div>
             </div>
         </section>
@@ -121,9 +132,11 @@
                 <div class="flex items-center">
                     <p class="text-xl pr-[1px]">ANATOLIY BABUSHKA</p>
                 </div>
+
                 <p class="w-2/3">
                     Engineering Leader | Driving Team Growth, Product Development, and Technical Strategy
                 </p>
+
                 <div class="flex items-center gap-x-3">
                     <a aria-label="LinkedIn Profile" href="https://www.linkedin.com/in/bbsnly/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#2563eb"
@@ -131,6 +144,14 @@
                             <path
                                 d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24ZM96,176a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0ZM88,96a12,12,0,1,1,12-12A12,12,0,0,1,88,96Zm96,80a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140Z">
                             </path>
+                        </svg>
+                    </a>
+
+                    <a aria-label="GitHub Profile" href="https://www.github.com/bbsnly/">
+                        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 105 105">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+                                fill="#24292f" />
                         </svg>
                     </a>
                 </div>
