Add services section with descriptions and images to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     </script>
 
     <meta charset="UTF-8">
-    <!-- <link rel="icon" href="/logo.png"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Anatoliy Babushka | Engineering Leader</title>
@@ -124,6 +123,78 @@
                 </p>
             </div>
         </section>
+
+        <section id="services" class="px-2 xl:px-0 container xl:w-252 mx-auto my-20 scroll-mt-10">
+            <h2 class="text-center text-3xl font-gill-sans-nova">
+                I Will help you stand out
+            </h2>
+
+            <div class="grid grid-cols-12 md:grid-rows-6 gap-3 mt-10">
+                <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
+                    <img width="400px" height="280px"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/mentoring.jpg"
+                        alt="Mentoring" loading="lazy">
+
+                    <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
+                        <i class="fi fi-rr-brain"></i>Mentoring
+                    </h3>
+
+                    <p>
+                        Benefit from over a decade of engineering leadership. I provide personalized mentoring to
+                        accelerate your professional growth, sharpen leadership skills, and overcome organizational
+                        challenges. Elevate your career with proven strategies and expert guidance.
+                    </p>
+                </div>
+
+                <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
+                    <img width="400px" height="280px"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/product_development.jpg"
+                        alt="Product Development" loading="lazy">
+
+                    <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
+                        <i class="fi fi-rr-people-carry-box"></i>Product Development
+                    </h3>
+
+                    <p>
+                        Transform your product vision into reality. I streamline the process from product discovery to
+                        launch, integrating engineering excellence with strategic management. Drive innovation and
+                        market success with a comprehensive, hands-on approach.
+                    </p>
+                </div>
+
+                <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
+                    <img width="400px" height="280px"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/technical_strategy.jpg"
+                        alt="Technical Strategy" loading="lazy">
+
+                    <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
+                        <i class="fi fi-rr-pencil"></i>Technical Strategy
+                    </h3>
+
+                    <p>
+                        Leverage a robust technical strategy designed by a seasoned engineering leader. I align
+                        technology initiatives with business goals to boost efficiency, accelerate time-to-market, and
+                        drive impactful innovation and compliance.
+                    </p>
+                </div>
+
+                <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
+                    <img width="400px" height="280px"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/software_development.jpg"
+                        alt="Software Development" loading="lazy">
+
+                    <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
+                        <i class="fi fi-rr-interactive"></i>Software Development
+                    </h3>
+
+                    <p>
+                        For mission-critical projects, I offer expert hands-on coding. With deep software engineering
+                        expertise, I tackle complex challenges, build scalable solutions, and provide direct coding
+                        support to ensure high-quality, reliable results.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="flex flex-col bg-secondary-100 mt-20">
@@ -164,6 +235,9 @@
                     </li>
                     <li class="hover:text-primary">
                         <a aria-label="About section" href="#about">About</a>
+                    </li>
+                    <li class="hover:text-primary">
+                        <a aria-label="Services section" href="#services">Services</a>
                     </li>
                 </ul>
             </div>
