Add new WebP images and update index.html to use them

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <meta property="og:title" content="Anatoliy Babushka | Engineering Leader">
     <meta property="og:description"
         content="Experienced Engineering Leader with 10+ years of success in team growth, product development, and technical strategy, driving efficiency and innovation.">
-    <meta property="og:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png">
+    <meta property="og:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.webp">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://anatoliybabushka.com">
     <meta property="twitter:title" content="Anatoliy Babushka | Engineering Leader">
     <meta property="twitter:description"
         content="Experienced Engineering Leader with 10+ years of success in team growth, product development, and technical strategy, driving efficiency and innovation.">
-    <meta property="twitter:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png">
+    <meta property="twitter:image" content="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.webp">
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script type="module" crossorigin="" src="https://anatoliybabushka.com/script.js"></script>
@@ -91,7 +91,7 @@
 
                 <div class="hidden md:flex w-1/2">
                     <img width="200px" height="500px" class="h-full w-full object-cover animate-reveal-image"
-                        src="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.png" alt="Anatoliy Babushka"
+                        src="https://anatoliybabushka.com/Anatoliy_Babushka_no_background.webp" alt="Anatoliy Babushka"
                         loading="eager">
                 </div>
             </div>
@@ -101,7 +101,7 @@
             class="flex flex-col-reverse md:flex-row gap-10 px-2 xl:px-0 container xl:w-252 mx-auto my-20 scroll-mt-10">
             <div class="md:w-1/2 h-[700px]">
                 <img width="200px" height="1000px" class="h-full w-full object-cover object-center-top"
-                    src="https://anatoliybabushka.com/Anatoliy_Babushka.jpg" alt="Profile pic" loading="lazy">
+                    src="https://anatoliybabushka.com/Anatoliy_Babushka.webp" alt="Profile pic" loading="lazy">
             </div>
 
             <div class="flex flex-col gap-y-5 md:w-1/2 justify-center">
@@ -132,7 +132,7 @@
             <div class="grid grid-cols-12 md:grid-rows-6 gap-3 mt-10">
                 <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
                     <img width="400px" height="280px"
-                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/mentoring.jpg"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/mentoring.webp"
                         alt="Mentoring" loading="lazy">
 
                     <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
@@ -148,7 +148,7 @@
 
                 <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
                     <img width="400px" height="280px"
-                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/product_development.jpg"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/product_development.webp"
                         alt="Product Development" loading="lazy">
 
                     <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
@@ -164,7 +164,7 @@
 
                 <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
                     <img width="400px" height="280px"
-                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/technical_strategy.jpg"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/technical_strategy.webp"
                         alt="Technical Strategy" loading="lazy">
 
                     <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
@@ -180,7 +180,7 @@
 
                 <div class="bg-secondary-200 col-span-12 md:col-span-6 md:row-span-3 rounded-xl p-10">
                     <img width="400px" height="280px"
-                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/software_development.jpg"
+                        class="rounded-xl object-cover object-left-bottom h-[280px] w-full" src="https://anatoliybabushka.com/software_development.webp"
                         alt="Software Development" loading="lazy">
 
                     <h3 class="flex items-center gap-x-2 text-primary text-xl my-3">
